--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,9 @@
+dist: xenial
 language: node_js
-
-env:
-  - CXX=g++-4.8
 
 node_js:
   - 4
   - 6
   - 8
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-4.8
-
 sudo: false
-
-before_install:
-  - $CXX --version
