--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "jsdom": "^6.5.1",
-    "libxmljs": "git://github.com/znerol/libxmljs.git#xmlwriter-0.18.0"
+    "libxmljs": "znerol/libxmljs#xmlwriter-0.19.5"
   },
   "devDependencies": {
     "browserify": "^14.0.0",
